--- a/Simulator/Simulator/MainWindow.xaml
+++ b/Simulator/Simulator/MainWindow.xaml
@@ -1,8 +1,11 @@
 ﻿<Window x:Class="Simulator.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:local="clr-namespace:Simulator.UserControls"
+        Title="Stoplicht simulatie" ResizeMode="NoResize" WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow">
     <Grid>
-        
+        <Border BorderThickness="1" BorderBrush="Black" Height="786" Width="1366" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <local:Map x:Name="Map" Background="White"  />
+        </Border>
     </Grid>
 </Window>
