--- a/Simulator/Simulator/MainWindow.xaml
+++ b/Simulator/Simulator/MainWindow.xaml
@@ -9,5 +9,20 @@
                 <local:Map x:Name="Map" Background="White"  />
             </Border>
         </ScrollViewer>
+        <Grid Width="400" VerticalAlignment="Top" HorizontalAlignment="Left">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Rectangle  Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Opacity="0.05"  Fill="Black"/>
+            <Label Grid.Row="0" Foreground="Black" Opacity="1.0" Content="X" FontSize="35" HorizontalAlignment="Right" VerticalAlignment="Top" MouseLeftButtonDown="Label_MouseLeftButtonDown"/>
+            <ListView x:Name="LogListview" Grid.Row="1" Height="150" Margin="2" Background="Transparent">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Label Content="{Binding}" Foreground="Black" FontSize="8" />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
     </Grid>
 </Window>
